frontend/src/components/details/navbar.css
/* Style the navigation menu */
.navbar {
    width: 100%;
    height: auto;
    color: #1b1534;
    padding: 0px;
    background-color: var(--global--background--color) !important;
    margin: auto;
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    /* border: 3px solid var(--global--button--color); */
    /* background-color: var(--global--panel--color); */
}

/* -webkit-radial-gradient(  bottom right, #4D217A,#1B1534 ); */
:root {
    --global--background--color: #dedede;
    --global--button--text--color: #1b1534;
    --global--panel-title--FontSize: 22px;
    --global--text-subtitle--FontSize: 19px;
}

.navbar i {
    margin-right: 5px;
    margin-left: 5px;
}

.navbar Link {
    text-decoration: none;
}

/* Stylechanges when hovering a linking button in the navbar */
.Addbtn:hover,
.BackButton:hover,
.Pdfbtn:hover {
    box-shadow: 0px 0px 9px 5px var(--global--button--color) inset;
    -webkit-box-shadow: 0px 0px 9px 5px var(--global--button--color) inset;
    -moz-box-shadow: 0px 0px 9px 5px var(--global--button--color) inset;
    /* border-radius: 5px;  for rounded corners */
}

.Addbtn,
.BackButton,
.Pdfbtn,
.Closebtn {
    transition: 0.2s ease-out;
}

.BackButton {
    display: flex;
    flex-direction: column;
    justify-content: center;
    padding-left: 3px;
    padding-right: 5px;
    margin-left: 0;
    margin-right: 0;
    font-weight: bold;
    color: var(--global--button--text--color);
    background-color: var(--global--background--color);
    text-decoration: none;
    font-size: 28px;
    border-style: none;
    cursor: pointer;
    border-radius: 8px;
}

.Addbtn {
    float: left;
    display: flex;
    flex-direction: row;
    font-weight: bold;
    /* color: var(--global--panel--color); */
    background-color: var(--global--background--color);
    color: var(--global--button--text--color);
    text-decoration: none;
    font-size: 22px;
    text-align: right; /* If you want the text to be centered */
    border-style: none;
    padding: 10px;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 8px;

}

.Pdfbtn {
    float: left;
    display: flex;
    flex-direction: row;
    text-decoration: none;
    font-weight: bold;
    /* color: var(--global--panel--color); */
    background-color: var(--global--background--color);
    color: var(--global--button--text--color);
    font-size: 22px;
    border-style: none;
    padding: 10px;
    padding-left: 10px;
    padding-right: 10px;
    border-radius: 8px;

}

.Closebtn {
    float: left;
    /* color: var(--global--panel--color); */
    background-color: var(--global--background--color);
    color: var(--global--button--text--color);
    text-decoration: none;
    font-size: 24px;
    border-style: none;
    cursor: pointer;
    margin-right: 3px;
}

.NavbarTitle {
    align-content: left;
    margin-left: 0px;
    padding-left: 10px;
    margin-right: auto;
    margin-top: auto;
    margin-bottom: auto;
}

.navbar b {
    background-color: var(--global--background--color);
    text-decoration: none;
    font-size: 22px;
}

